[package]
name = "pitwall"
version = "0.1.0"
edition = "2021"
description = "F1 24 telemetry capture, storage, and analysis"

[dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Parquet / Arrow
parquet = { version = "53", features = ["arrow"] }
arrow = { version = "53", features = ["prettyprint"] }

# Async runtime (for UDP receiver)
tokio = { version = "1", features = ["full"] }

# CLI
clap = { version = "4", features = ["derive"] }

# WebSocket server
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors"] }
futures = "0.3"

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytemuck = { version = "1", features = ["derive"] }

[[bin]]
name = "pitwall"
path = "src/main.rs"
